# libphdi

./: .codecov.yml  .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  README  acinclude.m4  appveyor.yml  build.ps1  configure.ac  libphdi.ini  libphdi.pc.in  libphdi.spec.in  setup.cfg  setup.cfg.in  synclibs.ps1  synclibs.sh  syncsharedlibs.sh  synctestdata.ps1  synctestdata.sh  tox.ini
include/: Makefile.am  libphdi.h.in
include/libphdi/: codepage.h  definitions.h.in  error.h  extern.h  features.h.in  types.h.in
libphdi/: Makefile.am  libphdi.c  libphdi.rc.in  libphdi_block_descriptor.c  libphdi_block_descriptor.h  libphdi_block_tree.c  libphdi_block_tree.h  libphdi_block_tree_node.c  libphdi_block_tree_node.h  libphdi_codepage.h  libphdi_data_files.c  libphdi_data_files.h  libphdi_debug.c  libphdi_debug.h  libphdi_definitions.h.in  libphdi_disk_descriptor_xml_file.c  libphdi_disk_descriptor_xml_file.h  libphdi_disk_parameters.c  libphdi_disk_parameters.h  libphdi_error.c  libphdi_error.h  libphdi_extent_descriptor.c  libphdi_extent_descriptor.h  libphdi_extent_table.c  libphdi_extent_table.h  libphdi_extent_values.c  libphdi_extent_values.h  libphdi_extern.h  libphdi_handle.c  libphdi_handle.h  libphdi_i18n.c  libphdi_i18n.h  libphdi_image_descriptor.c  libphdi_image_descriptor.h  libphdi_image_values.c  libphdi_image_values.h  libphdi_io_handle.c  libphdi_io_handle.h  libphdi_libbfio.h  libphdi_libcdata.h  (+45 more)
msvscpp/: Makefile.am  libphdi.sln
msvscpp/dokan/: dokan.vcproj
msvscpp/libbfio/: libbfio.vcproj
msvscpp/libcdata/: libcdata.vcproj
msvscpp/libcdirectory/: libcdirectory.vcproj
msvscpp/libcerror/: libcerror.vcproj
msvscpp/libcfile/: libcfile.vcproj
msvscpp/libclocale/: libclocale.vcproj
msvscpp/libcnotify/: libcnotify.vcproj
msvscpp/libcpath/: libcpath.vcproj
msvscpp/libcsplit/: libcsplit.vcproj
msvscpp/libcstring/: libcstring.vcproj
msvscpp/libcsystem/: libcsystem.vcproj
msvscpp/libcthreads/: libcthreads.vcproj
msvscpp/libfcache/: libfcache.vcproj
msvscpp/libfdata/: libfdata.vcproj
msvscpp/libfguid/: libfguid.vcproj
msvscpp/libfvalue/: libfvalue.vcproj
msvscpp/libphdi/: libphdi.vcproj
msvscpp/libuna/: libuna.vcproj
msvscpp/phdi_test_block_descriptor/: phdi_test_block_descriptor.vcproj
msvscpp/phdi_test_block_tree/: phdi_test_block_tree.vcproj
msvscpp/phdi_test_block_tree_node/: phdi_test_block_tree_node.vcproj
msvscpp/phdi_test_data_files/: phdi_test_data_files.vcproj
msvscpp/phdi_test_disk_descriptor_xml_file/: phdi_test_disk_descriptor_xml_file.vcproj
msvscpp/phdi_test_disk_parameters/: phdi_test_disk_parameters.vcproj
msvscpp/phdi_test_error/: phdi_test_error.vcproj
msvscpp/phdi_test_extent_descriptor/: phdi_test_extent_descriptor.vcproj
msvscpp/phdi_test_extent_table/: phdi_test_extent_table.vcproj
msvscpp/phdi_test_extent_values/: phdi_test_extent_values.vcproj
msvscpp/phdi_test_handle/: phdi_test_handle.vcproj
msvscpp/phdi_test_image_descriptor/: phdi_test_image_descriptor.vcproj
msvscpp/phdi_test_image_values/: phdi_test_image_values.vcproj
msvscpp/phdi_test_io_handle/: phdi_test_io_handle.vcproj
msvscpp/phdi_test_notify/: phdi_test_notify.vcproj
msvscpp/phdi_test_open_close/: phdi_test_open_close.vcproj
msvscpp/phdi_test_read/: phdi_test_read.vcproj
msvscpp/phdi_test_seek/: phdi_test_seek.vcproj
msvscpp/phdi_test_snapshot_values/: phdi_test_snapshot_values.vcproj
msvscpp/phdi_test_support/: phdi_test_support.vcproj
msvscpp/phdi_test_system_string/: phdi_test_system_string.vcproj
msvscpp/phdi_test_xml_tag/: phdi_test_xml_tag.vcproj
msvscpp/phdiinfo/: phdiinfo.vcproj
phditools/: Makefile.am  byte_size_string.c  byte_size_string.h  info_handle.c  info_handle.h  mount_dokan.c  mount_dokan.h  mount_file_entry.c  mount_file_entry.h  mount_file_system.c  mount_file_system.h  mount_fuse.c  mount_fuse.h  mount_handle.c  mount_handle.h  phdiinfo.c  phdimount.c  phdioutput.c  phdioutput.h  phditools_getopt.c  phditools_getopt.h  phditools_i18n.h  phditools_libbfio.h  phditools_libcdata.h  phditools_libcerror.h  phditools_libclocale.h  phditools_libcnotify.h  phditools_libcpath.h  phditools_libcstring.h  phditools_libcsystem.h  phditools_libfguid.h  phditools_libphdi.h  phditools_libuna.h  phditools_output.c  phditools_output.h  phditools_signal.c  phditools_signal.h  phditools_unused.h
pyphdi/: Makefile.am  pyphdi.c  pyphdi.h  pyphdi_disk_types.c  pyphdi_disk_types.h  pyphdi_error.c  pyphdi_error.h  pyphdi_extent_descriptor.c  pyphdi_extent_descriptor.h  pyphdi_extent_descriptors.c  pyphdi_extent_descriptors.h  pyphdi_file.c  pyphdi_file.h  pyphdi_file_object_io_handle.c  pyphdi_file_object_io_handle.h  pyphdi_file_objects_io_pool.c  pyphdi_file_objects_io_pool.h  pyphdi_handle.c  pyphdi_handle.h  pyphdi_image_descriptor.c  pyphdi_image_descriptor.h  pyphdi_image_descriptors.c  pyphdi_image_descriptors.h  pyphdi_integer.c  pyphdi_integer.h  pyphdi_libbfio.h  pyphdi_libcerror.h  pyphdi_libclocale.h  pyphdi_libcstring.h  pyphdi_libphdi.h  pyphdi_python.h  pyphdi_unused.h
pyphdi-python2/: Makefile.am
pyphdi-python3/: Makefile.am
tests/: Makefile.am  phdi_test_block_descriptor.c  phdi_test_block_tree.c  phdi_test_block_tree_node.c  phdi_test_data_files.c  phdi_test_disk_descriptor_xml_file.c  phdi_test_disk_parameters.c  phdi_test_error.c  phdi_test_extent_descriptor.c  phdi_test_extent_table.c  phdi_test_extent_values.c  phdi_test_functions.c  phdi_test_functions.h  phdi_test_getopt.c  phdi_test_getopt.h  phdi_test_handle.c  phdi_test_image_descriptor.c  phdi_test_image_values.c  phdi_test_io_handle.c  phdi_test_libbfio.h  phdi_test_libcdata.h  phdi_test_libcerror.h  phdi_test_libclocale.h  phdi_test_libcnotify.h  phdi_test_libcpath.h  phdi_test_libcstring.h  phdi_test_libcsystem.h  phdi_test_libcthreads.h  phdi_test_libphdi.h  phdi_test_libuna.h  phdi_test_macros.h  phdi_test_memory.c  phdi_test_memory.h  phdi_test_notify.c  phdi_test_open_close.c  phdi_test_read.c  phdi_test_seek.c  phdi_test_snapshot_values.c  phdi_test_sparse_image_header.c  phdi_test_storage_image.c  (+27 more)
(+35 files in other folders)
