include_HEADERS = \
	libphdi.h

pkginclude_HEADERS = \
	libphdi/codepage.h \
	libphdi/definitions.h \
	libphdi/error.h \
	libphdi/extern.h \
	libphdi/features.h \
	libphdi/types.h

EXTRA_DIST = \
	libphdi.h.in \
	libphdi/definitions.h.in \
	libphdi/features.h.in \
	libphdi/types.h.in

DISTCLEANFILES = \
	libphdi.h \
	libphdi/definitions.h \
	libphdi/features.h \
	libphdi/types.h \
	Makefile \
	Makefile.in

