MSVSCPP_FILES = \
	dokan/dokan.vcproj \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcdirectory/libcdirectory.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcstring/libcstring.vcproj \
	libcsystem/libcsystem.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libphdi/libphdi.vcproj \
	libuna/libuna.vcproj \
	phdi_test_error/phdi_test_error.vcproj \
	phdi_test_handle/phdi_test_handle.vcproj \
	phdi_test_notify/phdi_test_notify.vcproj \
	phdi_test_open_close/phdi_test_open_close.vcproj \
	phdi_test_read/phdi_test_read.vcproj \
	phdi_test_seek/phdi_test_seek.vcproj \
	phdi_test_support/phdi_test_support.vcproj \
	phdiinfo/phdiinfo.vcproj \
	phdimount/phdimount.vcproj \
	pyphdi/pyphdi.vcproj \
	libphdi.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

