MSVSCPP_FILES = \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcdirectory/libcdirectory.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfguid/libfguid.vcproj \
	libfvalue/libfvalue.vcproj \
	libphdi/libphdi.vcproj \
	libuna/libuna.vcproj \
	phdi_test_block_descriptor/phdi_test_block_descriptor.vcproj \
	phdi_test_block_tree/phdi_test_block_tree.vcproj \
	phdi_test_block_tree_node/phdi_test_block_tree_node.vcproj \
	phdi_test_data_files/phdi_test_data_files.vcproj \
	phdi_test_disk_descriptor_xml_file/phdi_test_disk_descriptor_xml_file.vcproj \
	phdi_test_disk_parameters/phdi_test_disk_parameters.vcproj \
	phdi_test_error/phdi_test_error.vcproj \
	phdi_test_extent_descriptor/phdi_test_extent_descriptor.vcproj \
	phdi_test_extent_table/phdi_test_extent_table.vcproj \
	phdi_test_extent_values/phdi_test_extent_values.vcproj \
	phdi_test_handle/phdi_test_handle.vcproj \
	phdi_test_image_descriptor/phdi_test_image_descriptor.vcproj \
	phdi_test_image_values/phdi_test_image_values.vcproj \
	phdi_test_io_handle/phdi_test_io_handle.vcproj \
	phdi_test_notify/phdi_test_notify.vcproj \
	phdi_test_snapshot_values/phdi_test_snapshot_values.vcproj \
	phdi_test_support/phdi_test_support.vcproj \
	phdi_test_system_string/phdi_test_system_string.vcproj \
	phdi_test_xml_tag/phdi_test_xml_tag.vcproj \
	phdiinfo/phdiinfo.vcproj \
	phdimount/phdimount.vcproj \
	pyphdi/pyphdi.vcproj \
	libphdi.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

